add result page

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 <li class="nav-item"><a class="nav-link" href="#WenetSpeech2.0">E - MMAD 2.0</a></li>
                 <li class="nav-item"><a class="nav-link" href="#sponsor">sponsor</a></li>
                 <li class="nav-item"><a class="nav-link" href="#acknowledgements">acknowledgements</a></li>
+                <li class="nav-item"><a class="nav-link" href="./result.html">result</a></li>
                 <li class="nav-item"><a class="nav-link" href="assets/paper.pdf">paper</a></li>
 <!--                <li class="nav-item"><a class="nav-link" href="https://github.com/wenet-e2e/WenetSpeech"><i-->
 <!--                        class="fab fa-github"></i></a></li>-->
@@ -217,7 +218,7 @@
         <div class="row align-items-center">
             <div class="col-lg-4 text-lg-start"></div>
             <div class="col-lg-4 my-3 my-lg-0">
-                <a class="link-dark text-decoration-none" href="#!">Copyright &copy; WenetSpeech 2021</a>
+                <a class="link-dark text-decoration-none" href="#!">Copyright &copy; E - MMAD 2021</a>
             </div>
             <div class="col-lg-4 text-lg-end">
             </div>
