--- a/index.html
+++ b/index.html
@@ -32,11 +32,12 @@
                 <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                 <li class="nav-item"><a class="nav-link" href="#license">license</a></li>
                 <li class="nav-item"><a class="nav-link" href="#download">download</a></li>
-                <li class="nav-item"><a class="nav-link" href="#WenetSpeech2.0">E - MMAD 2.0</a></li>
+<!--                <li class="nav-item"><a class="nav-link" href="#WenetSpeech2.0">E - MMAD 2.0</a></li>-->
                 <li class="nav-item"><a class="nav-link" href="#sponsor">sponsor</a></li>
                 <li class="nav-item"><a class="nav-link" href="#acknowledgements">acknowledgements</a></li>
-                <li class="nav-item"><a class="nav-link" href="./result.html">result</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://github.com/E-MMAD/E-MMAD" target="_blank">code</a></li>
                 <li class="nav-item"><a class="nav-link" href="assets/paper.pdf">paper</a></li>
+                <li class="nav-item"><a class="nav-link" href="./result.html">showing</a></li>
 <!--                <li class="nav-item"><a class="nav-link" href="https://github.com/wenet-e2e/WenetSpeech"><i-->
 <!--                        class="fab fa-github"></i></a></li>-->
             </ul>
@@ -46,8 +47,8 @@
 <!-- Masthead-->
 <header class="masthead">
     <div class="container" id="masthead_container">
-        <div class="masthead-heading">E - MMAD</div>
-        <div class="masthead-subheading">One of the largest video captioning datasets, E-commercial Multimodal Advertising Dataset, which contains 100,000+ valid data elaborately picked out from 1,000,000+ Real Product Examples in both Chinese and English. </div>
+        <div class="masthead-heading" style="font-size: 32px;">E - MMAD</div>
+        <div class="masthead-subheading" style="font-size: 16px;">One of the largest video captioning datasets, E-commercial Multimodal Advertising Dataset, which contains 100,000+ valid data elaborately picked out from 1,000,000+ Real Product Examples in both Chinese and English. </div>
     </div>
 </header>
 <!-- Services-->
@@ -55,55 +56,57 @@
     <div class="container">
         <div class="text-center">
             <h2 class="section-heading text-uppercase">About</h2>
-            <h3 class="section-subheading text-muted">
-                we present an e-commercial multi-modal advertising dataset, E-MMAD, which contains 120 thousand valid data elaborately picked out from 1.3 million real product examples in both Chinese and English. Our dataset sources are the Chinese largest e-commerce website shopping platform (\url{www.taobao.com}). Noticeably, it is one of the largest video captioning datasets in this field, in which each example has its product video (around 30 seconds), title, caption and structured information table that is observed to play a vital role in practice.
+            <h3 class="section-subheading text-muted" style="font-weight: bolder; line-height: 24px;">
+                We present an e-commercial multi-modal advertising dataset, E-MMAD, which contains 120 thousand valid data elaborately picked out from 1.3 million real product examples in both Chinese and English. Our dataset sources are the Chinese largest e-commerce website shopping platform (\url{www.taobao.com}). Noticeably, it is one of the largest video captioning datasets in this field, in which each example has its product video (around 30 seconds), title, caption and structured information table that is observed to play a vital role in practice.
             </h3>
         </div>
         <div class="row text-center">
             <div class="col-md-4">
                 <h3 class="my-3">100,000 +</h3>
                 <h5 style="color:rgba(0, 0, 0, .6)">high-level multimodal data</h5>
-                <p class="text-muted">with confidence >= 95%, for supervised training.（待编辑）</p>
+<!--                <p class="text-muted">with confidence >= 95%, for supervised training.（待编辑）</p>-->
             </div>
             <div class="col-md-4">
                 <h3 class="my-3">4000 +</h3>
                 <h5 style="color:rgba(0, 0, 0, .6)">e-commercial  product categories  about various fields</h5>
-                <p class="text-muted">0.6 < confidence < 0.95, for semi-supervised or noisy training, etc.（待编辑）</p>
+<!--                <p class="text-muted">0.6 < confidence < 0.95, for semi-supervised or noisy training, etc.（待编辑）</p>-->
             </div>
             <div class="col-md-4">
-                <h3 class="my-3">xxx +</h3>
-                <h5 style="color:rgba(0, 0, 0, .6)">classes of structure information</h5>
-                <p class="text-muted">
-                    consists of both labeled and unlabeled data, for unsupervised training or pretraining, etc.（待编辑）
-                </p>
+                <h3 class="my-3">300,000 +</h3>
+                <h5 style="color:rgba(0, 0, 0, .6)">Structure Information Words</h5>
+<!--                <p class="text-muted">-->
+<!--                    consists of both labeled and unlabeled data, for unsupervised training or pretraining, etc.（待编辑）-->
+<!--                </p>-->
             </div>
         </div>
         <br/>
         <div class="col-lg-12 text-center">
             <h3 class="section-heading text-uppercase">Diversity</h3>
             <h3 class="section-subheading text-muted">
-                The WenetSpeech can be mainly classified into 10 categories according to speaking styles and spoken
-                scenarios.（待编辑）
+                The real world advertising description is vivid and various. So we collect a large-scale high-quality and reliable e-commercial multimodal advertising dataset. It is one of the largest video captioning datasets in this field. E-MMAD is completely collected from human real life and carefully selected so that it is qualified to meet the needs of real life.
             </h3>
         </div>
         <div class="row">
-            <div class="col-md-3">
-            </div>
-            <div class="col-md-6">
+            <a class="col-md-12" href="assets/img/a-1.png">
                 <img src="assets/img/a-1.png" alt="utterances" width="100%">
-            </div>
-            <div class="col-md-3">
-            </div>
+            </a>
         </div>
         <br/>
         <div class="row">
-            <div class="col-md-3">
-            </div>
-            <div class="col-md-6">
+            <a class="col-md-12" href="assets/img/a-2.png">
                 <img src="assets/img/a-2.png" alt="utterances" width="100%">
-            </div>
-            <div class="col-md-3">
-            </div>
+            </a>
+        </div>
+        <div class="row">
+            <a class="col-md-12" href="assets/img/b-2.png">
+                <img src="assets/img/b-2.png" alt="utterances" width="100%">
+            </a>
+        </div>
+        <br/>
+        <div class="row">
+            <a class="col-md-12" href="assets/img/b-3.png">
+                <img src="assets/img/b-3.png" alt="utterances" width="100%">
+            </a>
         </div>
     </div>
 </section>
@@ -114,13 +117,7 @@
         <div class="text-center" id="license">
             <h2 class="section-heading text-uppercase">License</h2>
             <h3 class="section-subheading">
-                （待编辑）The WenetSpeech dataset is available to download for non-commercial purposes under a <a
-                    href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International
-                License. </a>
-                WenetSpeech doesn't own the copyright of the audios, the copyright remains with the original owners of
-                the
-                video or audio,
-                and the public URL is given for the original video or audio.
+                The E-MMAD dataset is available to download for non-commercial purposes under a Creative Commons Attribution 4.0 International License.
             </h3>
         </div>
         <div class="text-center" id="download">
@@ -133,36 +130,36 @@
     </div>
 </section>
 
-<section class="page-section" id="WenetSpeech2.0">
-    <div class="container">
-        <div class="text-center">
-            <h2 class="section-heading text-uppercase">E - MMAD 2.0</h2>
-            <h3 class="section-subheading text-muted">
-                We are preparing for E-MMAD2.0, which will contain more data to face the bigger multimodal pre-train model.
-            </h3>
-        </div>
-        <div class="row">
-            <div class="col-lg-2">
-            </div>
-            <div class="col-lg-4">
-                <div class="team-member">
-                    <img class="mx-auto " src="assets/img/binbin.jpg" alt="..."/>
-                    <h4>Binbin Zhang（待替换）</h4>
-                    <p class="text-muted">binbzha@qq.com</p>
-                </div>
-            </div>
-            <div class="col-lg-4">
-                <div class="team-member">
-                    <img class="mx-auto" src="assets/img/lvhang.jpg" alt="..."/>
-                    <h4>Hang Lv（待替换）</h4>
-                    <p class="text-muted">hanglyu1991@gmail.com</p>
-                </div>
-            </div>
-            <div class="col-lg-2">
-            </div>
-        </div>
-    </div>
-</section>
+<!--<section class="page-section" id="WenetSpeech2.0">-->
+<!--    <div class="container">-->
+<!--        <div class="text-center">-->
+<!--            <h2 class="section-heading text-uppercase">E - MMAD 2.0</h2>-->
+<!--            <h3 class="section-subheading text-muted">-->
+<!--                We are preparing for E-MMAD2.0, which will contain more data to face the bigger multimodal pre-train model.-->
+<!--            </h3>-->
+<!--        </div>-->
+<!--        <div class="row">-->
+<!--            <div class="col-lg-2">-->
+<!--            </div>-->
+<!--            <div class="col-lg-4">-->
+<!--                <div class="team-member">-->
+<!--                    <img class="mx-auto " src="assets/img/binbin.jpg" alt="..."/>-->
+<!--                    <h4>Binbin Zhang（待替换）</h4>-->
+<!--                    <p class="text-muted">binbzha@qq.com</p>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="col-lg-4">-->
+<!--                <div class="team-member">-->
+<!--                    <img class="mx-auto" src="assets/img/lvhang.jpg" alt="..."/>-->
+<!--                    <h4>Hang Lv（待替换）</h4>-->
+<!--                    <p class="text-muted">hanglyu1991@gmail.com</p>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="col-lg-2">-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</section>-->
 <!-- Clients-->
 <div class="py-5 bg-light" id="sponsor">
     <div class="container">
@@ -170,7 +167,7 @@
             <h2 class="section-heading text-uppercase">Sponsor</h2>
             <br/>
         </div>
-        <p>
+        <p style="text-align: center;">
             Let's guess together and the answer will be revealed soon.
         </p>
 <!--        <div class="row align-items-center">-->
