--- a/result.html
+++ b/result.html
@@ -29,13 +29,14 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="#license">license</a></li>
-                <li class="nav-item"><a class="nav-link" href="#download">download</a></li>
-                <li class="nav-item"><a class="nav-link" href="#WenetSpeech2.0">E - MMAD 2.0</a></li>
-                <li class="nav-item"><a class="nav-link" href="#sponsor">sponsor</a></li>
-                <li class="nav-item"><a class="nav-link" href="#acknowledgements">acknowledgements</a></li>
                 <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
+<!--                <li class="nav-item"><a class="nav-link" href="#about">About</a></li>-->
+<!--                <li class="nav-item"><a class="nav-link" href="#license">license</a></li>-->
+<!--                <li class="nav-item"><a class="nav-link" href="#download">download</a></li>-->
+<!--                <li class="nav-item"><a class="nav-link" href="#WenetSpeech2.0">E - MMAD 2.0</a></li>-->
+<!--                <li class="nav-item"><a class="nav-link" href="#sponsor">sponsor</a></li>-->
+<!--                <li class="nav-item"><a class="nav-link" href="#acknowledgements">acknowledgements</a></li>-->
+                <li class="nav-item"><a class="nav-link" href="https://github.com/E-MMAD/E-MMAD" target="_blank">code</a></li>
                 <li class="nav-item"><a class="nav-link" href="assets/paper.pdf">paper</a></li>
 <!--                <li class="nav-item"><a class="nav-link" href="https://github.com/wenet-e2e/WenetSpeech"><i-->
 <!--                        class="fab fa-github"></i></a></li>-->
