--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="text-center">
             <h2 class="section-heading text-uppercase">About</h2>
             <h3 class="section-subheading text-muted" style="font-weight: bolder; line-height: 24px;">
-                We present an e-commercial multi-modal advertising dataset, E-MMAD, which contains 120 thousand valid data elaborately picked out from 1.3 million real product examples in both Chinese and English. Our dataset sources are the Chinese largest e-commerce website shopping platform (\url{www.taobao.com}). Noticeably, it is one of the largest video captioning datasets in this field, in which each example has its product video (around 30 seconds), title, caption and structured information table that is observed to play a vital role in practice.
+                We present an e-commercial multi-modal advertising dataset, E-MMAD, which contains 120 thousand valid data elaborately picked out from 1.3 million real product examples in both Chinese and English. Our dataset sources are the Chinese largest e-commerce website shopping platform <a href="https://www.taobao.com">(www.taobao.com)</a>. Noticeably, it is one of the largest video captioning datasets in this field, in which each example has its product video (around 30 seconds), title, caption and structured information table that is observed to play a vital role in practice.
             </h3>
         </div>
         <div class="row text-center">
@@ -82,7 +82,7 @@
         <br/>
         <div class="col-lg-12 text-center">
             <h3 class="section-heading text-uppercase">Diversity</h3>
-            <h3 class="section-subheading text-muted">
+            <h3 class="section-subheading text-muted" style="font-weight: bolder; line-height: 24px;">
                 The real world advertising description is vivid and various. So we collect a large-scale high-quality and reliable e-commercial multimodal advertising dataset. It is one of the largest video captioning datasets in this field. E-MMAD is completely collected from human real life and carefully selected so that it is qualified to meet the needs of real life.
             </h3>
         </div>
